[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'hello-node-runtime-wasm'
version = '1.0.0'
[dependencies.hello-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['hello-node-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
